Integracion completa revisada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,30 @@
-# database init, supports mysql too
+# Ajustes del servidor (escuche en todas las interfaces en el puerto 8080)
 server.address=0.0.0.0
 server.port=8080
 
+#URI del microservicio
 ownerservice.url=http://localhost:8081
 
-#database=h2
-#spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
-#spring.sql.init.data-locations=classpath*:db/${database}/data.sql
-
+# Configuracion del data source (manejo de variables de entorno para el manejo de URL de DB)
 database=postgres
 spring.datasource.jdbc-url=${POSTGRES_URL:jdbc:postgresql://localhost/petclinic}
 spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
 # SQL is written to be idempotent so this is safe
 spring.sql.init.mode=always
 #spring.main.allow-bean-definition-overriding=true
 
-# Web
+# Plantillas Web
 spring.thymeleaf.mode=HTML
 
-# JPA
+# Configuracion de JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Internationalization
 spring.messages.basename=messages/messages
@@ -34,5 +34,6 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level.org.springframework.samples.petclinic=DEBUG
-# Maximum time static resources should be cached
+
+# Caching: Maximum time static resources should be cached
 spring.web.resources.cache.cachecontrol.max-age=12h
