Se creo una env variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.address=0.0.0.0
 server.port=8080
 
 #URI del microservicio
-ownerservice.url=http://localhost:8081
+ownerservice.url=${OWNER_SERVICE:http://localhost:8081}
 
 # Configuracion del data source (manejo de variables de entorno para el manejo de URL de DB)
 database=postgres
